--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "next": "14.1.4",
+    "next-image-export-optimizer": "^1.12.3",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3"
@@ -28,5 +29,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "export": "next build && next-image-export-optimizer"
 }
