--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "next": "14.1.4",
     "next-image-export-optimizer": "^1.12.3",
+    "random-words": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3"
